--- a/project_writeup/Importance_of_kinetics_in_realistic_simulations.html
+++ b/project_writeup/Importance_of_kinetics_in_realistic_simulations.html
@@ -21,8 +21,12 @@ h4   {color: lightblue;}
 <center> <h1>Evaluating the effect of accuracy of kinetic models in realistic simulations</h1> </center>	
 <h2>Abstract</h2>
 
-Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representation of these schemes are essential. The question however that is not addressed is how compact a mechanism is correct for the objective of interest. Normally, reduced mechanisms are obtained by preserving certain combustion targets, but what are the ramifications when running them through a realistic computation? Simply put, is the reduced mechanism when run through complex calculations yielding accurate results? To what degree?
+Reaction mechanisms that describe the oxidation of a fuel are huge with several thousands of individual steps. While using them in computations, compact representation of these schemes are essential. The question however that is not addressed is how compact a mechanism is correct for the objective of interest. Normally, reduced mechanisms are obtained by preserving certain combustion targets, but what are the ramifications when running them through a realistic computation? 
 
+<br><br>
+<i>Simply put, is the reduced mechanism when run through complex calculations yielding accurate results? To what degree?</i>
+
+<br><br>
 As a part of the project, the student will be involved in generating reduced mechanisms, using them in simulations, and interpreting the observations. 
 
 <h2>Pre-requisite</h2>
