--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 <table border="1" cellspacing="2" cellpadding="5" width="100%">
 <tr>
 	<td width="100%">
-<center><h3>***Position open for a project assistant to study the <br><a href=project_writeup/Importance_of_kinetics_in_realistic_simulations.html><i>Importance of kinetics in realistic simulations</i></a>***</h3> </center>
+<center><h3>Position open for a project assistant to study the <br><a href=project_writeup/Importance_of_kinetics_in_realistic_simulations.html><i>Importance of kinetics in realistic simulations</i></a></h3> </center>
 <!-- <center><h2> <a href="#" onclick="openCity(event, 'Available_Projects')"><i>Possible M. Tech/DD projects 2019</i></center></a></h2> -->
 </tr>
 </table>
