--- a/index.html
+++ b/index.html
@@ -894,6 +894,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 						 M. Tech in Mechanical Engineering from Nirma University, Ahmedabad, Gujarat (2018)</p> 
 		 				 <p class=card><i>Research interests:</i> Optimization methods in combustion kinetics</p>
 <!--						 Krunal obtained his B.E. in Mechanical Engineering from Government Engineering College, Modasa, Gujarat in 2016. Thereafter, he obtained his M. Tech in Mechanical Engineering from Nirma Unirversity, Ahmedabad, Gujarat in 2018. His research topic focuses on optimization methods in combustion kinetics. -->
+		 				 <p class=card><i>Email:</i> me18d005@smail.iitm.ac.in</p>
 						 </span>
 				 </div>
 	 </center>
@@ -1432,7 +1433,7 @@ All mechanism are made available and have been validated as discussed in the jou
 	<!-- Mechanism optimization framework -->
 	<!--<li> <a href="project_writeup/Reduced_Reaction_Models_For_Combustion.html" target="_blank"> Methods for mechanism reduction </a> -->
 	<li> <h3>Bottom-up approach to kinetic modeling of larger hydrocarbons</h3></li>
-		A bottom-up approach to compact model development has been put forth in one of <a href="publ-dme1">our recent works</a> to successfully develop a 23 species model for dimethylether. How can this be extended to higher hydrocarbons? A major challenge in adopting this methodology for higher hydrocarbons is the development of the fuel specific sub-mechanism. To begin with, the student will use the approach to develop the kinetics of a small molecule and thereafter investigate how to extend the approach. 
+		A bottom-up approach to compact model development has been put forth in one of <a href="#publ-dme1">our recent works</a> to successfully develop a 23 species model for dimethylether. How can this be extended to higher hydrocarbons? A major challenge in adopting this methodology for higher hydrocarbons is the development of the fuel specific sub-mechanism. To begin with, the student will use the approach to develop the kinetics of a small molecule and thereafter investigate how to extend the approach. 
 	<li> <h3>Development of structure based compact reaction models</h3></li>
 		
 	<!-- <li> Development of canonical kinetics solvers and post-processing tools (1 year: M. Tech project) -->
