--- a/index.html
+++ b/index.html
@@ -1433,7 +1433,7 @@ All mechanism are made available and have been validated as discussed in the jou
 	<!-- Mechanism optimization framework -->
 	<!--<li> <a href="project_writeup/Reduced_Reaction_Models_For_Combustion.html" target="_blank"> Methods for mechanism reduction </a> -->
 	<li> <h3>Bottom-up approach to kinetic modeling of larger hydrocarbons</h3></li>
-		A bottom-up approach to compact model development has been put forth in one of <a href="#publ-dme1">our recent works</a> to successfully develop a 23 species model for dimethylether. How can this be extended to higher hydrocarbons? A major challenge in adopting this methodology for higher hydrocarbons is the development of the fuel specific sub-mechanism. To begin with, the student will use the approach to develop the kinetics of a small molecule and thereafter investigate how to extend the approach. 
+		A bottom-up approach to compact model development has been put forth in one of <a href="#publ-dme1" onclick="openCity(event, 'Publications')">our recent works</a> to successfully develop a 23 species model for dimethylether. How can this be extended to higher hydrocarbons? A major challenge in adopting this methodology for higher hydrocarbons is the development of the fuel specific sub-mechanism. To begin with, the student will use the approach to develop the kinetics of a small molecule and thereafter investigate how to extend the approach. 
 	<li> <h3>Development of structure based compact reaction models</h3></li>
 		
 	<!-- <li> Development of canonical kinetics solvers and post-processing tools (1 year: M. Tech project) -->
