--- a/index.html
+++ b/index.html
@@ -910,6 +910,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 			  <p class=card><i>Background:</i> B. Tech and M. Tech in Mechanical Engineering from Pondicherry Engineering College, Puduchery (2014,2016)</p> 
 			  				 <p class=card><i>Research interests:</i> Chemical kinetic modeling and reactive simulations of fuels relevant to fire research</p>
 			  				 <p class=card><i>Co-advisor:</i> Prof. V. Raghavan, IIT Madras</p>
+			 				 <p class=card><i>Email:</i> me16d025@smail.iitm.ac.in</p>
 <!--			  Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from Pondicherry Engineering College, Puduchery in 2014 and 2016 respectively. His project revolves around chemical kinetic modeling and reactive simulations of fuels relevant to fire research, one among them being methylmethacrylate. His thesis is co-advised by Dr. V. Raghavan at IIT Madras. -->
 			</span>
 	 </div>
@@ -928,6 +929,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
 		 MS scholar, <a href="#misc" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
 			 <span class="tooltiptext"><p class=card><i>Background:</i> B.E. in Mechanical Engineering from PVG's College of Engineering and Technology, Pune (2017)</p> 
 				 <p class=card><i>Research interests:</i> Developing open source tools to generate compact kinetic models</p>
+			 	<p class=card><i>Email:</i> me18s033@smail.iitm.ac.in</p>
 				 <!-- Kedar obtained his B.E. in Mechanical Engineering from PVG's College of Engineering and Technology, Pune  in 2017. His research topic focuses on developing open source tools to generate compact kinetic models. -->
 			 </span>
 	 </div>
@@ -942,6 +944,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
   			 <span class="tooltiptext"><p class=card><i>Background:</i> B.E. in Mechanical Engineering from Gujarat Technological University (2016)</p> 
 				 <p class=card><i>Research interests:</i> Data-driven prediction of ignition delays</p>
 				 <p class=card><i>Co-advisor:</i> <a href="https://sivaramambikasaran.com">Dr. Sivaram Ambikasaran</a>, IIT Madras</p>
+			 	<p class=card><i>Email:</i> pragneshrana244@gmail.com </p>
 				 <!-- Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological University in 2016. His research topic focuses on simulation of droplet combustion with accurate chemical kinetics. His thesis is co-advised by Dr. Sivaram Ambikasaran at IIT Madras. -->
 			 </span> 
 	 </div>
@@ -954,6 +957,7 @@ Ignition delay has an important role in combustion. Ignition delay is affected b
   			<h4>Praise Noah Johnson<br>
   		 MS scholar, <a href="#kinetics_alternative" onclick="openCity(event, 'Current_Research')">Research</a> </h4>
   			 <span class="tooltiptext"><p class=card><i>Background:</i> B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore (2017)</p> 						 <p class=card><i>Research interests:</i> Kinetics of unsaturated ester content in biodiesel fuel</p>
+			 	<p class=card><i>Email:</i> praisenoahjohnson@gmail.com  </p>
 				 <!--Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. His research work centers on kinetics of unsaturated ester content in biodiesel fuel.-->
 			  </span>
 	 </div>
