importance write up

--- a/project_writeup/Importance_of_kinetics_in_realistic_simulations.html
+++ b/project_writeup/Importance_of_kinetics_in_realistic_simulations.html
@@ -39,11 +39,7 @@ Penchant to pick up computation fundaes and interest in combustion
 
 <h2>Additional details</h2>
 
-<b>Position:</b> Project assistant <br>
-
-<b>Duration:</b> 1 year <br>
-
-<b>Salary:</b> As per institute norms <br>
+<b>Position:</b> Project associate <br>
 
 <b>Selection procedure:</b> Personal interview. <br><br>
 
