--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -12,32 +12,46 @@ A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
-h2   {color: lightblue;}
-h3  {color: pink;}
+h2  {color: white;}
+h3  {color: lightpink;}
 }
 table, th, td {
-    border: 1px solid black;
+    border: 1px solid white;
+}
+h1{
+    margin-top: 4px;
+  margin-bottom: 4px;
+  margin-left: 4px;
+}
+h2{
+  margin-top: 4px;
+  margin-bottom: 4px;
+  margin-left: 4px;
+ 
 }
 h3{
-  margin-bottom: 0px;
+    margin-top: 4px;
+  margin-bottom: 4px;
+  font-size: 14pt;
+  margin-left: 4px;
 }
-
-
-* {
-    box-sizing: border-box;
+h4{
+  margin-top: 4px;
+  margin-bottom: 4px;
+  font-size: 12pt;
+  margin-left: 4px;
 }
-
-.column {
-    float: left;
-    width: 50%;
-    padding: 5px;
+h5{
+  color: lightyellow;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  font-size: 14pt;
+  margin-left: 4px;
 }
-
-/* Clearfix (clear floats) */
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
+p
+{
+  margin:0;
+  padding:0;
 }
 </style>
 <script>
@@ -49,184 +63,198 @@ h3{
   ga('create', 'UA-62002830-1', 'auto');
   ga('send', 'pageview');
 </script>
+<style>
+.collapsible {
+  background-color: gray;
+  cursor: pointer;
+  padding: 2px;
+  width: text-width;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 14pt;
+  font-family:"Palatino";
+}
+
+.active, .collapsible:hover {
+  background-color: slategray;
+}
+
+.content {
+  padding: 0 0px;
+  display: none;
+  overflow: hidden;
+  background-color: black;
+}
+</style>
+    
 </head>
 
 <body bgcolor = "black">
-	
-<center> <h1> ME1100: Undergraduate thermodynamics <br>
-Jul-Nov 2019 </h1>
 
-<!-- <div class="row">
-  <div class="column">
-    <img src="./images/Calvin-And-Hobbes-Need-To-Make-A-Robot.jpg" alt="Snow" style="width:95%">
-  </div>
-  <div class="column">
-    <img src="./images/Calvin_Entropy.jpg" alt="Forest" style="width:97%">
-  </div>
-</div> 
--->
+<table border="0" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td><center> <h2> ME1100: Thermodynamics </h2></td>
+<tr> <td><center> <h2> Jul-Nov 2019</h2> </center></td> </tr>
+<tr> <td><center> <h2> Semester I, ChemE batch</h2> </center></td> </tr>
+</table> 
 
-<table border="1" cellspacing="5" cellpadding="5" width="100%">
-	<td width="100%">
-	<center>
-		<h2><a href="https://owncloud.iitm.ac.in/index.php/s/JQztf5HFEt7DqwQ" target="_blank">Course contents</a></h2> 
-<h2> Instructor office hours: Wednesdays 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203 </h2></center> <br>
-</center>
-	</td>
-</table>
-
-<table border="1" cellspacing="5" cellpadding="5" width="100%">
-<tr>
-<td width="50%">
-<!-- ><h2>Lecture materials, Handouts, Exams </h2>
-
-<h3>Course Lectures </h3>
-<ul>	
-<li><a href="https://owncloud.iitm.ac.in/index.php/s/lGo6RpBHLT30rj4" target="_blank">Lecture notes from Prof. TS</a> (same as on moodle) <br> 
-<li><a href="https://owncloud.iitm.ac.in/index.php/s/K17xxuNZaEYar2g" target="_blank">Chapter 8 of notes from Prof. TS </a>
-<br><br>
-	</ul>
--->
-
-<!--<h3> Lecture summary </h3>
-<ul>	<li>	 	
- <a href="https://owncloud.iitm.ac.in/index.php/s/5dEzCKvgaRtbv9M" target="_blank">Fundamentals</a>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/xhD8v8FteRubLS9" target="_blank">Work</a>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/j1csU9MfhN2Ku3k" target="_blank">Temperature, Heat</a>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/0eo7s7DeamNn4Uq" target="_blank">First Law of thermodynamics</a>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/aFUgcebOONekXKT" target="_blank">Pure substances</a>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/9gjMQGhXIH0C0ZW" target="_blank">First Law for flow processes</a>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/suGHd5QTIZZIs8z" target="_blank">Second Law of thermodynamics</a>
-	<li> <a href="https://owncloud.iitm.ac.in/index.php/s/zGVDcj8D1yS5VXx" target="_blank">Heat & Work in Internally Reversible, Steady-State Flow Processes</a><br> <br>
-	</ul>
--->
-	
-<!-- <h3> Property tables: same as on moodle </h3>
-<ul>	<li>	<a href="https://owncloud.iitm.ac.in/index.php/s/RPiQyj4w9J5nizu" target="_blank">Water and R134a</a><br> <br>
-	</ul>
-
-
-<h3> Seating arrangement in exams </h3>
-<ul>	<li>	<a href="https://owncloud.iitm.ac.in/index.php/s/aePW5WdhcaJ6AXv" target="_blank">Ramanujan Block 202, 301 </a><br> <br>
-	</ul>
-	
-
-<h3> Practice exams</h3>
-<ul>
-<li>Quiz I: Jul-Nov 2016: 	
- <a href="https://owncloud.iitm.ac.in/index.php/s/HMqKGeioZj50QaC" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/LOu1X3HCDcNQJiE" target="_blank">Solutions</a>
-<li>Mock Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/Dj4z87WCepzRcr4" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/p8xPsVC6WTjZjav" target="_blank">Solutions</a>
-<li>Previous years' Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mQcRjFoTFRDYL3m" target="_blank">Questions</a> (view-able upon downloading) <br>
-<li>Quiz II: Jul-Nov 2016: 	
-	 <a href="https://owncloud.iitm.ac.in/index.php/s/JPAouIbyyhjtkBU" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/VF21YzBeK4EzrvD" target="_blank">Solutions</a>
-	 <li>Mock Quiz II: <a href="https://owncloud.iitm.ac.in/index.php/s/dImFykIc1PxncSS" target="_blank">Questions</a>,  <a href="https://owncloud.iitm.ac.in/index.php/s/t5FZd9Pcw6OHMn2" target="_blank"> Solution-to-Problem-3 </a>, <a href="https://owncloud.iitm.ac.in/index.php/s/S7XbQaJy3Kb9jwC" target="_blank"> Solution to True/False </a>
-		 <li>Old End Sems: <a href="https://owncloud.iitm.ac.in/index.php/s/SQxW7hP0dFkLAOe" target="_blank">Jul-Nov 2008</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/OSOlLyOhE1rnQ65" target="_blank">Jul-Nov 2010</a>, <br> 
-			 &emsp; &emsp; &emsp; &emsp; &emsp; <a href="https://owncloud.iitm.ac.in/index.php/s/MeKmqAqjfZRN6us" target="_blank">Jul-Nov 2014</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/6kTR7k9Gcw1Z4OV" target="_blank">Jan-May 2015</a>, <br>
-			 &emsp; &emsp; &emsp; &emsp; &emsp; <a href="https://owncloud.iitm.ac.in/index.php/s/zjWmxzom9N69N5N" target="_blank">2016-IITT</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/2jZcNKR97egzU9P" target="_blank"> Jan-May 2014</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/dMiEJfSOX2ke9HQ", target="_blank"> Jan-May 2016</a> (on moodle too)
-		<li>Mock End Sem: <a href="https://owncloud.iitm.ac.in/index.php/s/fWZCw4NnLp6ujjP" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/b2VnrnyhijogNHI" target="_blank">Solutions</a> (viewable upon downloading)
-</ul>
-
-<h3> Exams: same as on moodle </h3>
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td width="100%"><h3> Suggested Textbooks: </h3>
 <ul> 
-	<li> Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mBATrsORPwf3Bh7" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/47uKuppudIFq3Fk" target="_blank">Solutions</a>
-	<li> Quiz II: <a href="https://owncloud.iitm.ac.in/index.php/s/d0S4lWLGxfvIL79" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/cN9SDuxGuLAml0r" target="_blank">Solutions</a> 
-<br></ul>
--->
-</td>
+    <li> Fundamentals of Thermodynamics, Sonntag, Borgnakke, and Van Wylen, 2003, 6th Edition, John Wiley and Sons.
+	<li> Fundamentals of Engineering Thermodynamics, Moran and Shapiro, H. N, 1999, John Wiley and Sons.
+	<li> Basic Engineering Thermodynamics, Venkatesh, A., 2007, University Press
+	<li> Thermodynamics, An Engineering approach, Cengel and Boles, 5th edition, Edward Arnold (Publishers) Ltd
+	<li> Fundamentals of Engineering Thermodynamics, V. Babu, ANE Books Pvt. Ltd., 2018
+	<li> <i> Prof. T. Sundararajan's lecture notes are available on <a href="https://courses.iitm.ac.in">Moodle</a> </i>
+</ul>
+</tr>
+</table><br>
 
 
-<td width="50%">
-<!--<h2>Tutorials and Problem sheets </h2>
-<h3> Tutorials: same as on moodle </h3>
-<ul>
-	<li>Tutorial 1: 	
- <a href="https://owncloud.iitm.ac.in/index.php/s/mTtvHG8P9RmTeev" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/j7ksBktLoE6ToB4" target="_blank">Solutions</a> <br>
-    <li>Tutorial 2:
- <a href="https://owncloud.iitm.ac.in/index.php/s/TqMN1hbNWSwx1CQ" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/oFya5hMu8El0kE5" target="_blank">Solutions</a> (Solution to P6 needs correction) <br>
- 	<li>Tutorial 3:
- <a href="https://owncloud.iitm.ac.in/index.php/s/Wu0avN5EwW9kHRP" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/fsKkxo7jRkBhQjT" target="_blank"> Solutions-Part I</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/lcmwPpUS4uTFLn0" target="_blank"> Solutions-Part II</a><br>
- <li> Tutorial 4: <a href="https://owncloud.iitm.ac.in/index.php/s/jMFWZNLw58997lH" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/igHVMClfIyyuOHY" target="_blank"> Solutions</a> <br>
- <li> Tutorial 5: <a href="https://owncloud.iitm.ac.in/index.php/s/ZwvEhgrHn5gH8n0" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/TvR7zXe0adNkrU9" target="_blank"> Solutions</a> <br>
- <li> Tutorial 6: <a href="https://owncloud.iitm.ac.in/index.php/s/dzAdAbbtYO2nJOm" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/br5bRajbjr4IMlE" target="_blank"> Solutions</a> <br>
- <li> Tutorial 7: <a href="https://owncloud.iitm.ac.in/index.php/s/XW8kYseNYafiUvv" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/Qpch9YaOqkDzGOr" target="_blank"> Solutions</a> 
- <li> Tutorial 8: <a href="https://owncloud.iitm.ac.in/index.php/s/A04qtUlQA8lnhMi" target="_blank">Problems</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/Vc5l24ycYqvhjEZ" target="_blank"> Solutions</a>
-	 <br><br>
+<!-- <button class="collapsible"><h5>View more course info</h5></button> 
+<div class="content"> -->
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr><td width="50%">
+<h3> Instructors: </h3>
+<ul> <li> Dr. Krithika Narayanaswamy <br>
+# 203, Thermodynamics and Combustion Engineering Lab<br>
+Email: krithika@iitm.ac.in </li><br>
+<li> Dr. S. Varunkumar <br>
+# 206B, Thermodynamics and Combustion Engineering Lab<br>
+Email: varuns@iitm.ac.in </li>
+</ul>
+
+<h3> Learning Outcomes: </h3>
+	<ul> <li> Understand the basic principles of thermodynamics </li>
+		<li> Apply these principles to systems of relevance to engineers </li>
 	</ul>
+  
+<h3> Questions?</h3>
+	<ul>
+		<li> Instructors' office hours: <br>
+			Friday 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203/206B </li>
+		<li> Teaching Assistants: <br>
+		 TBA</li>
+	</ul>
+</td>
 
-<h3> Exercise problems: same as on moodle </h3>
-<ul>
-	<li>Problem Set 1: 	
-	 <a href="https://owncloud.iitm.ac.in/index.php/s/TH6VK3PsuQErZkc" target="_blank">Fundamentals, Work</a>
-	<li>Problem Set 2: 	
-	 <a href="https://owncloud.iitm.ac.in/index.php/s/6ewOu7yjhtWCxIE" target="_blank">Temperature, Heat</a>
-	<li>Problem Set 4: 	
-    <a href="https://owncloud.iitm.ac.in/index.php/s/JDxurkw5B2xqClv" target="_blank">Ideal gas, First law</a>
-    <li>Problem Set 5: <a href="https://owncloud.iitm.ac.in/index.php/s/fdf2Schlnux6Rsr" target="_blank">Ideal gas and mixtures, first law</a>
-    <li>Problem Set 6:  <a href="https://owncloud.iitm.ac.in/index.php/s/6S9euS2NApPYklQ" target="_blank">Steam-water substance, first law</a>
-  <li>Problem Set 9: <a href="https://owncloud.iitm.ac.in/index.php/s/XPIftdM8IecgId6" target="_blank">First Law for flow processes</a>
-  <li>Problem Set 11: <a href="https://owncloud.iitm.ac.in/index.php/s/314ZGwfFqq8bBuq" target="_blank">Second law of thermodynamics</a> 
-  <li>Problem Set 12: <a href="https://owncloud.iitm.ac.in/index.php/s/TGk1HXnfS6NxIyz" target="_blank">Entropy</a> 
-  <li> Problem Set 16: <a href="https://owncloud.iitm.ac.in/index.php/s/ePv57kPYclfFPHT" target="_blank">Cycles</a> 
-	  <br><br>
+<td width="50%"> 
+<h3> General information: </h3>
+<ul> <li> 10 credit core course </li>
+     <li> 3+1 lecture + tutorial hours per week in A slot<br>
+		 <p><font color="lightgreen"> <ul>  <li> Monday 8:00--8:50 AM </li>
+			  <li> Tuesday 1:00--1:50 PM </li>
+				 <li> Thursday 11-11:50 AM </li>
+					 <li> Friday 10-10:50 AM</li>
+				</ul></font></p>
+	  <li> 6 hours of reading/exercises recommended per week <br><br>
+	  <li> <p><font color="lightgreen">Venue: Raman 101, 102 </font></p></li>
+	  <li> Attendance requirement: 85% at least </li>
 </ul>
--->
 
-<!-- <h3> Additional problem sheets </h3>
+<h3> Grading policy: </h3>
+TBA
+
+</td>
+</tr>
+</table>
+<br>
+
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td width="100%">
+<h3> <font color="pink">
+Updates/Announcements:</font></h3>
 <ul>
-<li>Problem Set 3: 	
-  <a href="https://owncloud.iitm.ac.in/index.php/s/sS0Fp2ZbT3A1K73" target="_blank">Pure substances, First law</a>
-  <li>Problem Set 7: <a href="https://owncloud.iitm.ac.in/index.php/s/GvaX7aIOCVryARc" target="_blank">Steam-water substance, first law</a>
-  <li>Problem Set 8: <a href="https://owncloud.iitm.ac.in/index.php/s/9US7dpX4GytJhEB" target="_blank">First Law for flow processes</a>
-  <li>Problem Set 10: <a href="https://owncloud.iitm.ac.in/index.php/s/4qAp0GcmMBTuMQM" target="_blank">First Law for flow processes</a> (view-able upon downloading)
-  <li>Problem Set 13: <a href="https://owncloud.iitm.ac.in/index.php/s/ak6RQEnHGGbgB0Y" target="_blank"> Second Law, Entropy, Cycles </a>
-  <li> Problem Set 14: <a href="https://owncloud.iitm.ac.in/index.php/s/DLCLxmhmy9kzGSh" target="_blank">Practice problems on II Law </a>
-  <li>Problem Set 15: <a href="https://owncloud.iitm.ac.in/index.php/s/KduVAmlsqEEIS04" target="_blank"> Practice problems on Entropy </a>
-  <li>Corrections: <a href="https://owncloud.iitm.ac.in/index.php/s/vFN4hHuRArIH8BU" target="_blank">Corrections</a>
-   <br><br>
+	<li> 23/7: Welcome to ME1100! 
+		<ul><li>We start our instruction on August 1st. Check the time and venue above. 
+			<li>Make sure you have signed up on <a href="https://courses.iitm.ac.in">Moodle</a>. Tutorials will be made available through this platform.
+		</ul>
 </ul>
--->
-	
-<!-- <h3> Practice exams</h3>
-<ul>
-<li>Quiz I: Jul-Nov 2016: 	
- <a href="https://owncloud.iitm.ac.in/index.php/s/HMqKGeioZj50QaC" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/LOu1X3HCDcNQJiE" target="_blank">Solutions</a>
-<li>Mock Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/Dj4z87WCepzRcr4" target="_blank">Questions</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/p8xPsVC6WTjZjav" target="_blank">Solutions</a>
-<li>Previous years' Quiz I: <a href="https://owncloud.iitm.ac.in/index.php/s/mQcRjFoTFRDYL3m" target="_blank">Questions</a> (view-able upon downloading) <br>
-	<hr>
-<li>Quiz II: Jul-Nov 2016: 	
-	 <a href="https://owncloud.iitm.ac.in/index.php/s/JPAouIbyyhjtkBU" target="_blank">Questions</a> -->
-</td>
-</tr>
-</table>
+</div>
+</td></tr>
+</table><br>
 
-<!-- /*For later */
-<table>
-<tr>
-<td width="100%">
-<h2> Announcements: </h2>
-<ul>
-<li> Lecture on Aug 14: Resisted/Un-resisted expansions, Other forms of work
-</li> </ul>
-</td>
-</tr>
-</table>
+<br><br>
+<table border="1" cellspacing="2" cellpadding="2"  width="100%">
+	<col width = "50%">
+	<col width = "25%">	
+	<col width = "25%">	
+	<tr> <th> <h2> Course outline</h2>
+		 <th> <h2> Reading</h2>
+		 <th> <h2> Exercises</h2>
+	</tr> 
+</table><br>
 
-<table>
-<tr>
-<td width="50%">
-<h2>Check your conceptual understanding</h2>
-</td>
+<h3>Module 1: Fundamental concepts </h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "50%">
+	<col width = "25%">	
+	<col width = "25%">	
+	<tr> <td> System, Control volume, Property, Process </td> <td> </td> <td> </td>
+	<tr> <td> Work  </td> <td> </td> <td> </td>
+	<tr> <td> Temperature and heat </td> <td> </td> <td> </td>
+	</tr>
+</table><br>
 
-<td width="50%">
-<h2>Exams </h2>
-</td>
+<h3>Module 2: Pure substances </h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "50%">
+	<col width = "25%">	
+	<col width = "25%">	
+	<tr> <td> Ideal gases and mixtures </td> <td> </td> <td> </td>
+	<tr> <td> Water-steam system  </td> <td> </td> <td> </td>
+	<tr> <td> Use of steam and R134a tables </td> <td> </td> <td> </td>
+	</tr>
+</table><br>
 
-</tr>
--->
-</table>
+<h3>Module 3: First law of thermodynamics </h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "50%">
+	<col width = "25%">	
+	<col width = "25%">	
+	<tr> <td> Applied to system </td> <td> </td> <td> </td>
+	<tr> <td> Applied to flow processes  </td> <td> </td> <td> </td>
+	</tr>
+</table><br>
 
-<!--		<br><br><br>
-		
-        <a style="text-decoration:none; color:white" href="https://owncloud.iitm.ac.in/public.php?service=files&t=5Y7upXtS618WB0L" target="_blank"> <h4> The set of students who came to the very last lecture hour</h4> </a>	<br>
--->	
+<h3>Module 4: Second law </h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "50%">
+	<col width = "25%">	
+	<col width = "25%">	
+	<tr> <td> Applied to heat engines </td> <td> </td> <td> </td>
+	<tr> <td> Applied to processes: concept of entropy </td> <td> </td> <td> </td>
+	</tr>
+</table><br>
+
+<h3>Module 5: Thermodynamic cycles </h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "50%">
+	<col width = "25%">	
+	<col width = "25%">	
+	<tr> <td> Rankine cycle </td> <td> </td> <td> </td>
+	<tr> <td> Brayton cycle </td> <td> </td> <td> </td>
+	<tr> <td> Vapor compression cycle </td> <td> </td> <td> </td>
+	</tr>
+</table><br>
+
+
+<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
+
 </body></html>
