--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -104,9 +104,8 @@ p
     <li> Fundamentals of Thermodynamics, Sonntag, Borgnakke, and Van Wylen, 2003, 6th Edition, John Wiley and Sons.
 	<li> Fundamentals of Engineering Thermodynamics, Moran and Shapiro, H. N, 1999, John Wiley and Sons.
 	<li> Basic Engineering Thermodynamics, Venkatesh, A., 2007, University Press
-	<li> Thermodynamics, An Engineering approach, Cengel and Boles, 5th edition, Edward Arnold (Publishers) Ltd
 	<li> Fundamentals of Engineering Thermodynamics, V. Babu, ANE Books Pvt. Ltd., 2018
-	<li> <i> Prof. T. Sundararajan's lecture notes are available on <a href="https://courses.iitm.ac.in">Moodle</a> </i>
+	<li> Thermodynamics, An Engineering approach, Cengel and Boles, 5th edition, Edward Arnold (Publishers) Ltd
 </ul>
 </tr>
 </table><br>
@@ -126,17 +125,12 @@ Email: varuns@iitm.ac.in </li>
 </ul>
 
 <h3> Learning Outcomes: </h3>
-	<ul> <li> Understand the basic principles of thermodynamics </li>
-		<li> Apply these principles to systems of relevance to engineers </li>
+	<ul> <li> Formulation of system or control volume type analysis in practical energy conversion problems and apply energy/ mass balances correctly. </li>
+		<li> Representation of various energy conversion processes using thermodynamic state diagrams. </li>
+		<li> Estimation of property changes in substances through appropriate property relationships or property tables </li>
+		<li> Evaluation of the ideal and actual performance characteristics for various devices/processes  by applying I and II laws of Thermodynamics. </li>
 	</ul>
   
-<h3> Questions?</h3>
-	<ul>
-		<li> Instructors' office hours: <br>
-			Friday 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203/206B </li>
-		<li> Teaching Assistants: <br>
-		 TBA</li>
-	</ul>
 </td>
 
 <td width="50%"> 
@@ -154,8 +148,18 @@ Email: varuns@iitm.ac.in </li>
 </ul>
 
 <h3> Grading policy: </h3>
-TBA
+<ul> <li> Quiz-I: 20% </li>
+	 <li> Quiz-II: 20% </li>
+	 <li> End semester exam: 60% </li>
+</ul>
 
+<h3> Questions?</h3>
+	<ul>
+		<li> Instructors' office hours: <br>
+			Friday 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203/206B </li>
+		<li> Teaching Assistants: <br>
+		 TBA</li>
+	</ul>
 </td>
 </tr>
 </table>
@@ -197,7 +201,17 @@ Updates/Announcements:</font></h3>
 	</tr>
 </table><br>
 
-<h3>Module 2: Pure substances </h3>
+<h3>Module 2: First law of thermodynamics for a system</h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "50%">
+	<col width = "25%">	
+	<col width = "25%">	
+	<tr> <td>  </td> <td> </td> <td> </td>
+	<tr> <td>   </td> <td> </td> <td> </td>
+	</tr>
+</table><br>
+
+<h3>Module 3: Pure substances </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "50%">
 	<col width = "25%">	
@@ -208,27 +222,39 @@ Updates/Announcements:</font></h3>
 	</tr>
 </table><br>
 
-<h3>Module 3: First law of thermodynamics </h3>
+<h3>Module 4: First law of thermodynamics for flow processes </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "50%">
 	<col width = "25%">	
 	<col width = "25%">	
-	<tr> <td> Applied to system </td> <td> </td> <td> </td>
-	<tr> <td> Applied to flow processes  </td> <td> </td> <td> </td>
+	<tr> <td>  </td> <td> </td> <td> </td>
+	<tr> <td>   </td> <td> </td> <td> </td>
 	</tr>
 </table><br>
 
-<h3>Module 4: Second law </h3>
+<h3>Module 5: Second law for heat engines </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "50%">
 	<col width = "25%">	
 	<col width = "25%">	
-	<tr> <td> Applied to heat engines </td> <td> </td> <td> </td>
-	<tr> <td> Applied to processes: concept of entropy </td> <td> </td> <td> </td>
+	<tr> <td> </td> <td> </td> <td> </td>
+	<tr> <td> </td> <td> </td> <td> </td>
 	</tr>
 </table><br>
 
-<h3>Module 5: Thermodynamic cycles </h3>
+
+<h3>Module 6: Second law for processes </h3>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "50%">
+	<col width = "25%">	
+	<col width = "25%">	
+	<tr> <td> </td> <td> </td> <td> </td>
+	<tr> <td> </td> <td> </td> <td> </td>
+	</tr>
+</table><br>
+
+
+<h3>Module 7: Thermodynamic cycles </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "50%">
 	<col width = "25%">	
