teaching ME1100: more details

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -206,8 +206,8 @@ Updates/Announcements:</font></h3>
 	<col width = "50%">
 	<col width = "25%">	
 	<col width = "25%">	
-	<tr> <td>  </td> <td> </td> <td> </td>
-	<tr> <td>   </td> <td> </td> <td> </td>
+	<tr> <td> Cyclic and non-cyclic processes </td> <td> </td> <td> </td>
+	<tr> <td> Energy and its modes  </td> <td> </td> <td> </td>
 	</tr>
 </table><br>
 
@@ -227,8 +227,9 @@ Updates/Announcements:</font></h3>
 	<col width = "50%">
 	<col width = "25%">	
 	<col width = "25%">	
-	<tr> <td>  </td> <td> </td> <td> </td>
-	<tr> <td>   </td> <td> </td> <td> </td>
+	<tr> <td> Steady flow processes </td> <td> </td> <td> </td>
+	<tr> <td> Steady flow devices </td> <td> </td> <td> </td>
+	<tr> <td> Unsteady flow processes </td> <td> </td> <td> </td>
 	</tr>
 </table><br>
 
@@ -237,8 +238,10 @@ Updates/Announcements:</font></h3>
 	<col width = "50%">
 	<col width = "25%">	
 	<col width = "25%">	
-	<tr> <td> </td> <td> </td> <td> </td>
-	<tr> <td> </td> <td> </td> <td> </td>
+	<tr> <td> Direct and reverse heat engines </td> <td> </td> <td> </td>
+	<tr> <td> Thermal efficiency</td> <td> </td> <td> </td>
+	<tr> <td> Reversible processes, internal and external irreversiblity</td> <td> </td> <td> </td>
+	<tr> <td> Carnot cycle, Absolute temperature scale</td> <td> </td> <td> </td>
 	</tr>
 </table><br>
 
@@ -248,8 +251,8 @@ Updates/Announcements:</font></h3>
 	<col width = "50%">
 	<col width = "25%">	
 	<col width = "25%">	
-	<tr> <td> </td> <td> </td> <td> </td>
-	<tr> <td> </td> <td> </td> <td> </td>
+	<tr> <td> Entropy change for processes </td> <td> </td> <td> </td>
+	<tr> <td> Isentropic efficiency, Irreversibilty </td> <td> </td> <td> </td>
 	</tr>
 </table><br>
 
