teaching ME1100: more details

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -211,6 +211,8 @@ Updates/Announcements:</font></h3>
 	</tr>
 </table><br>
 
+<center><i> Quiz-I roughly around this time </i></center>
+
 <h3>Module 3: Pure substances </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "50%">
@@ -232,6 +234,8 @@ Updates/Announcements:</font></h3>
 	<tr> <td> Unsteady flow processes </td> <td> </td> <td> </td>
 	</tr>
 </table><br>
+
+<center><i> Quiz-II roughly around this time </i></center>
 
 <h3>Module 5: Second law for heat engines </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
@@ -268,7 +272,8 @@ Updates/Announcements:</font></h3>
 	</tr>
 </table><br>
 
-
+<center><i>End-semester exam at this stage<i></center>
+	
 <script>
 var coll = document.getElementsByClassName("collapsible");
 var i;
