edit project position

--- a/project_writeup/Importance_of_kinetics_in_realistic_simulations.html
+++ b/project_writeup/Importance_of_kinetics_in_realistic_simulations.html
@@ -31,7 +31,7 @@ As a part of the project, the student will be involved in generating reduced mec
 
 <h2>Pre-requisite</h2>
 
-Penchant to pick up computation fundaes and interest in combustion
+Penchant to pick up computation fundaes and interest in combustion; Prior background in combustion and computations is highly desirable.
 
 <!-- <h2>Reading</h2> -->
 <!-- http://web.stanford.edu/group/pitsch/publication/PepiotJMUSSCI2005.pdf -->
