--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -158,7 +158,7 @@ Email: varuns@iitm.ac.in </li>
 		<li> Instructors' office hours: <br>
 			Friday 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203/206B </li>
 		<li> Teaching Assistants: <br>
-		 TBA</li>
+		 Ibrahim, Nivethana Kumar, Praise Noah Johnson</li>
 	</ul>
 </td>
 </tr>
