final exam me6166

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -115,11 +115,16 @@ p
 <div class="content"> -->
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr><td width="50%">
+<h3> Batch Info:</h3>
+<ul> <li> Batch I: CH19B001--CH19B050 </li>
+	<li> Batch II: CH19B051--CH19B101, CH18B105 </li>
+</ul>
+
 <h3> Instructors: </h3>
-<ul> <li> Dr. Krithika Narayanaswamy <br>
+<ul> <li> Dr. Krithika Narayanaswamy (Batch I)<br>
 # 203, Thermodynamics and Combustion Engineering Lab<br>
 Email: krithika@iitm.ac.in </li><br>
-<li> Dr. S. Varunkumar <br>
+<li> Dr. S. Varunkumar (Batch II)<br>
 # 206B, Thermodynamics and Combustion Engineering Lab<br>
 Email: varuns@iitm.ac.in </li>
 </ul>
@@ -143,7 +148,8 @@ Email: varuns@iitm.ac.in </li>
 					 <li> Friday 10-10:50 AM</li>
 				</ul></font></p>
 	  <li> 6 hours of reading/exercises recommended per week <br><br>
-	  <li> <p><font color="lightgreen">Venue: Raman 101, 102 </font></p></li>
+	  <li> Venue: <p><font color="lightgreen"> <ul><li> Batch I: Raman 101  </li>
+		  									  <li> Batch II: Raman 102 </li></ul> </font></p></li>
 	  <li> Attendance requirement: 85% at least </li>
 </ul>
 
@@ -155,10 +161,12 @@ Email: varuns@iitm.ac.in </li>
 
 <h3> Questions?</h3>
 	<ul>
-		<li> Instructors' office hours: <br>
-			Friday 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203/206B </li>
 		<li> Teaching Assistants: <br>
-		 Ibrahim, Nivethana Kumar, Praise Noah Johnson</li>
+		    <ul> <li> Batch I: Ibrahim, Nivethana Kumar</li>
+			     <li> Batch II: Praise Noah Johnson  </li> </ul>
+		<li> TA discussion hours: 
+		<li> Instructors' discussion hours: 
+			 Friday 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203/206B </li>
 	</ul>
 </td>
 </tr>
@@ -172,7 +180,7 @@ Updates/Announcements:</font></h3>
 <ul>
 	<li> 23/7: Welcome to ME1100! 
 		<ul><li>We start our instruction on August 1st. Check the time and venue above. 
-			<li>Make sure you have signed up on <a href="https://courses.iitm.ac.in">Moodle</a>. Tutorials will be made available through this platform.
+			<li>Make sure you have signed up on <a href="https://courses.iitm.ac.in">Moodle</a>. Tutorials/Handouts will be made available through this platform.
 		</ul>
 </ul>
 </div>
