--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -120,11 +120,12 @@ p
 	<ul> <li> Mid-semester exam: 30% <br>
 		<p style="padding-left: 50px;"><font color="lightgreen">Date: March 5th (Tuesday), Time: 6 PM--8 PM, Venue: TDCE seminar hall</font></p>
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: One A4 size sheet (written on both sides) is permitted</font></p></li>
-		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/kYst8b9cLpzIgwn">Exam</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/ewnybY9v4VlI2wz">Solutions</a></p>
+		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/kYst8b9cLpzIgwn" target="_blank">Exam</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/ewnybY9v4VlI2wz">Solutions</a></p>
 		 <li> Final exam: 45%</li>
 		 <p style="padding-left: 50px;"><font color="lightgreen">Date: May 3rd (Friday), Time: 9 AM--12 PM, Venue: TDCE seminar hall</font></p>
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: Two A4 size sheets (written on both sides) are permitted</font></p>
 		<p style="padding-left: 50px;"><font color="lightgreen">Topics: All materials covered from the beginning of the course till the last day of classes</font></p></li>
+		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/AhodnwpsABHiOqK" target="_blank">Exam</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/HiLysdWlUimMQnK">Solutions</a> (to a couple of problems)
 		</li>
 		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
 		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/index.php/s/bTuzOTYzPEcjqf6" target="_blank">March/April Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
