--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -126,7 +126,7 @@ p
 		<p style="padding-left: 50px;"><font color="lightgreen">Cheat sheet: Two A4 size sheets (written on both sides) are permitted</font></p>
 		<p style="padding-left: 50px;"><font color="lightgreen">Topics: All materials covered from the beginning of the course till the last day of classes</font></p></li>
 		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/AhodnwpsABHiOqK" target="_blank">Exam</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/HiLysdWlUimMQnK">Solutions</a> (to a couple of problems)
-		</li>
+		<p style="padding-left: 50px;"><a href="https://owncloud.iitm.ac.in/index.php/s/O9k9L3nIqznZn7R" target="_blank">Supplementary Exam</a> (selected questions) </li>
 		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
 		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/index.php/s/bTuzOTYzPEcjqf6" target="_blank">March/April Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
 		 <li> <font color="lightgreen">About a third of the mid-sem and final exams will be in line with the tutorial sets</font>
