moldule 1 and 2 reading me1100

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -101,11 +101,12 @@ p
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%"><h3> Suggested Textbooks: </h3>
 <ul> 
-    <li> Fundamentals of Thermodynamics, Sonntag, Borgnakke, and Van Wylen, 2003, 6th Edition, John Wiley and Sons.
-	<li> Fundamentals of Engineering Thermodynamics, Moran and Shapiro, H. N, 1999, John Wiley and Sons.
-	<li> Basic Engineering Thermodynamics, Venkatesh, A., 2007, University Press
-	<li> Fundamentals of Engineering Thermodynamics, V. Babu, ANE Books Pvt. Ltd., 2018
-	<li> Thermodynamics, An Engineering approach, Cengel and Boles, 5th edition, Edward Arnold (Publishers) Ltd
+    <li> Fundamentals of Thermodynamics, Sonntag, Borgnakke, and Van Wylen, 2003, 6th Edition, John Wiley and Sons. (SB)
+	<li> Fundamentals of Engineering Thermodynamics, Moran and Shapiro, H. N, 1999, John Wiley and Sons. (MS)
+	<li> Basic Engineering Thermodynamics, Venkatesh, A., 2007, University Press (AV)
+	<li> Fundamentals of Engineering Thermodynamics, V. Babu, ANE Books Pvt. Ltd., 2018 (VB)
+	<li> Thermodynamics, An Engineering approach, Cengel and Boles, 5th edition, Edward Arnold Publishers Ltd (CB)
+	<li> Elementals of Chemical Thermodynamics, Leonard K. Nash (LN)
 </ul>
 </tr>
 </table><br>
@@ -203,9 +204,10 @@ Updates/Announcements:</font></h3>
 	<col width = "50%">
 	<col width = "25%">	
 	<col width = "25%">	
-	<tr> <td> System, Control volume, Property, Process </td> <td> </td> <td> </td>
-	<tr> <td> Work  </td> <td> </td> <td> </td>
-	<tr> <td> Temperature and heat </td> <td> </td> <td> </td>
+	<tr> <td> System, Control volume, Property, Process </td> <td> CB $1-3--$1-7</td> <td> </td>
+	<tr> <td> Pressure measuring devices </td>  <td>  CB $1-9--$1-11 </td> <td> </td>
+	<tr> <td> Work </td> <td> CB $2-4, $2-5 </td> <td> </td>
+	<tr> <td> Temperature and Heat </td> <td> CB $1-8, $2-3</td> <td> </td>
 	</tr>
 </table><br>
 
@@ -214,8 +216,8 @@ Updates/Announcements:</font></h3>
 	<col width = "50%">
 	<col width = "25%">	
 	<col width = "25%">	
-	<tr> <td> Cyclic and non-cyclic processes </td> <td> </td> <td> </td>
-	<tr> <td> Energy and its modes  </td> <td> </td> <td> </td>
+	<tr> <td> Cyclic and non-cyclic processes </td> <td> CB $2-6 </td> <td> </td>
+	<tr> <td> Energy and its modes  </td> <td> CB $2-2 </td> <td> </td>
 	</tr>
 </table><br>
 
