moldule 1 and 2 reading me1100

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -189,15 +189,18 @@ Updates/Announcements:</font></h3>
 </table><br>
 
 <br><br>
+<p><font color="lightgreen"><i>SE: Solved Example; PS: Problem Sheet</i></font></p>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
 	<col width = "50%">
 	<col width = "25%">	
 	<col width = "25%">	
 	<tr> <th> <h2> Course outline</h2>
 		 <th> <h2> Reading</h2>
-		 <th> <h2> Exercises</h2>
+		 <th> <h2> Exercises*</h2>
 	</tr> 
-</table><br>
+</table>
+<p><font color="lightgreen"><i>* in addition to tutorial sheets</i></font></p>
+<br>
 
 <h3>Module 1: Fundamental concepts </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
@@ -206,10 +209,11 @@ Updates/Announcements:</font></h3>
 	<col width = "25%">	
 	<tr> <td> System, Control volume, Property, Process </td> <td> CB $1-3--$1-7</td> <td> </td>
 	<tr> <td> Pressure measuring devices </td>  <td>  CB $1-9--$1-11 </td> <td> </td>
-	<tr> <td> Work </td> <td> CB $2-4, $2-5 </td> <td> </td>
+	<tr> <td> Work </td> <td> CB $2-4, $2-5 </td> <td>  VB SE3.1--3.4 </td>
 	<tr> <td> Temperature and Heat </td> <td> CB $1-8, $2-3</td> <td> </td>
 	</tr>
-</table><br>
+</table>
+<br>
 
 <h3>Module 2: First law of thermodynamics for a system</h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
