--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -191,12 +191,10 @@ Updates/Announcements:</font></h3>
 <br><br>
 <p><font color="lightgreen"><i>SE: Solved Example; PS: Problem Sheet</i></font></p>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
-	<col width = "50%">
-	<col width = "25%">	
-	<col width = "25%">	
+	<col width = "60%">
+	<col width = "40%">	
 	<tr> <th> <h2> Course outline</h2>
 		 <th> <h2> Reading</h2>
-		 <th> <h2> Exercises*</h2>
 	</tr> 
 </table>
 <p><font color="lightgreen"><i>* in addition to tutorial sheets</i></font></p>
@@ -204,24 +202,22 @@ Updates/Announcements:</font></h3>
 
 <h3>Module 1: Fundamental concepts </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "50%">
-	<col width = "25%">	
-	<col width = "25%">	
-	<tr> <td> System, Control volume, Property, Process </td> <td> CB $1-3--$1-7</td> <td> </td>
-	<tr> <td> Pressure measuring devices </td>  <td>  CB $1-9--$1-11 </td> <td> </td>
-	<tr> <td> Work </td> <td> CB $2-4, $2-5 </td> <td>  VB SE3.1--3.4 </td>
-	<tr> <td> Temperature and Heat </td> <td> CB $1-8, $2-3</td> <td> </td>
+	<col width = "60%">
+	<col width = "40%">	
+	<tr> <td> System, Control volume, Property, Process </td> <td> CB $1-3--$1-7</td> 
+	<tr> <td> Pressure measuring devices </td>  <td>  CB $1-9--$1-11 </td>
+	<tr> <td> Work </td> <td> CB $2-4, $2-5 </td> 
+	<tr> <td> Temperature and Heat </td> <td> CB $1-8, $2-3</td> 
 	</tr>
 </table>
 <br>
 
 <h3>Module 2: First law of thermodynamics for a system</h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "50%">
-	<col width = "25%">	
-	<col width = "25%">	
-	<tr> <td> Cyclic and non-cyclic processes </td> <td> CB $2-6 </td> <td> </td>
-	<tr> <td> Energy and its modes  </td> <td> CB $2-2 </td> <td> </td>
+	<col width = "60%">
+	<col width = "40%">	
+	<tr> <td> Cyclic and non-cyclic processes </td> <td> CB $2-6 </td> 
+	<tr> <td> Energy and its modes  </td> <td> CB $2-2 </td> 
 	</tr>
 </table><br>
 
@@ -229,23 +225,21 @@ Updates/Announcements:</font></h3>
 
 <h3>Module 3: Pure substances </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "50%">
-	<col width = "25%">	
-	<col width = "25%">	
-	<tr> <td> Ideal gases and mixtures </td> <td> </td> <td> </td>
-	<tr> <td> Water-steam system  </td> <td> </td> <td> </td>
-	<tr> <td> Use of steam and R134a tables </td> <td> </td> <td> </td>
+	<col width = "60%">
+	<col width = "40%">	
+	<tr> <td> Ideal gases and mixtures </td> <td> </td> 
+	<tr> <td> Water-steam system  </td> <td> </td> 
+	<tr> <td> Use of steam and R134a tables </td> <td> </td> 
 	</tr>
 </table><br>
 
 <h3>Module 4: First law of thermodynamics for flow processes </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "50%">
-	<col width = "25%">	
-	<col width = "25%">	
-	<tr> <td> Steady flow processes </td> <td> </td> <td> </td>
-	<tr> <td> Steady flow devices </td> <td> </td> <td> </td>
-	<tr> <td> Unsteady flow processes </td> <td> </td> <td> </td>
+	<col width = "60%">
+	<col width = "40%">	
+	<tr> <td> Steady flow processes </td> <td> </td> 
+	<tr> <td> Steady flow devices </td> <td> </td> 
+	<tr> <td> Unsteady flow processes </td> <td> </td>
 	</tr>
 </table><br>
 
@@ -253,36 +247,33 @@ Updates/Announcements:</font></h3>
 
 <h3>Module 5: Second law for heat engines </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "50%">
-	<col width = "25%">	
-	<col width = "25%">	
-	<tr> <td> Direct and reverse heat engines </td> <td> </td> <td> </td>
-	<tr> <td> Thermal efficiency</td> <td> </td> <td> </td>
-	<tr> <td> Reversible processes, internal and external irreversiblity</td> <td> </td> <td> </td>
-	<tr> <td> Carnot cycle, Absolute temperature scale</td> <td> </td> <td> </td>
+	<col width = "60%">
+	<col width = "40%">	
+	<tr> <td> Direct and reverse heat engines </td> <td> </td> 
+	<tr> <td> Thermal efficiency</td> <td> </td> 
+	<tr> <td> Reversible processes, internal and external irreversiblity</td> <td> </td> 
+	<tr> <td> Carnot cycle, Absolute temperature scale</td> <td> </td> 
 	</tr>
 </table><br>
 
 
 <h3>Module 6: Second law for processes </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "50%">
-	<col width = "25%">	
-	<col width = "25%">	
-	<tr> <td> Entropy change for processes </td> <td> </td> <td> </td>
-	<tr> <td> Isentropic efficiency, Irreversibilty </td> <td> </td> <td> </td>
+	<col width = "60%">
+	<col width = "40%">	
+	<tr> <td> Entropy change for processes </td> <td> </td>
+	<tr> <td> Isentropic efficiency, Irreversibilty </td> <td> </td> 
 	</tr>
 </table><br>
 
 
 <h3>Module 7: Thermodynamic cycles </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
-	<col width = "50%">
-	<col width = "25%">	
-	<col width = "25%">	
-	<tr> <td> Rankine cycle </td> <td> </td> <td> </td>
-	<tr> <td> Brayton cycle </td> <td> </td> <td> </td>
-	<tr> <td> Vapor compression cycle </td> <td> </td> <td> </td>
+	<col width = "60%">
+	<col width = "40%">	
+	<tr> <td> Rankine cycle </td> <td> </td> 
+	<tr> <td> Brayton cycle </td> <td> </td> 
+	<tr> <td> Vapor compression cycle </td> <td> </td> 
 	</tr>
 </table><br>
 
