--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -189,7 +189,7 @@ Updates/Announcements:</font></h3>
 </table><br>
 
 <br><br>
-<p><font color="lightgreen"><i>SE: Solved Example; PS: Problem Sheet</i></font></p>
+<!-- <p><font color="lightgreen"><i>SE: Solved Example; PS: Problem Sheet</i></font></p> -->
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
 	<col width = "60%">
 	<col width = "40%">	
@@ -197,7 +197,6 @@ Updates/Announcements:</font></h3>
 		 <th> <h2> Reading</h2>
 	</tr> 
 </table>
-<p><font color="lightgreen"><i>* in addition to tutorial sheets</i></font></p>
 <br>
 
 <h3>Module 1: Fundamental concepts </h3>
