--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -203,7 +203,7 @@ Updates/Announcements:</font></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
-	<tr> <td> System, Control volume, Property, Process </td> <td> CB $1-3--$1-7</td> 
+	<tr> <td> System, Control volume, Property, Process </td> <td> CB $1-3--$1-7, LN $1</td> 
 	<tr> <td> Pressure measuring devices </td>  <td>  CB $1-9--$1-11 </td>
 	<tr> <td> Work </td> <td> CB $2-4, $2-5 </td> 
 	<tr> <td> Temperature and Heat </td> <td> CB $1-8, $2-3</td> 
@@ -215,7 +215,7 @@ Updates/Announcements:</font></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "60%">
 	<col width = "40%">	
-	<tr> <td> Cyclic and non-cyclic processes </td> <td> CB $2-6 </td> 
+	<tr> <td> Cyclic and non-cyclic processes </td> <td> CB $2-6, LN $2 </td> 
 	<tr> <td> Energy and its modes  </td> <td> CB $2-2 </td> 
 	</tr>
 </table><br>
