office hours ME1100

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -130,6 +130,10 @@ Email: krithika@iitm.ac.in </li><br>
 Email: varuns@iitm.ac.in </li>
 </ul>
 
+<h3> Teaching Assistants: </h3>
+	    <ul> <li> Batch I: Ibrahim, Nivethana Kumar</li>
+		     <li> Batch II: Praise Noah Johnson  </li> </ul>
+
 <h3> Learning Outcomes: </h3>
 	<ul> <li> Formulation of system or control volume type analysis in practical energy conversion problems and apply energy/ mass balances correctly. </li>
 		<li> Representation of various energy conversion processes using thermodynamic state diagrams. </li>
@@ -162,13 +166,15 @@ Email: varuns@iitm.ac.in </li>
 
 <h3> Questions?</h3>
 	<ul>
-		<li> Teaching Assistants: <br>
-		    <ul> <li> Batch I: Ibrahim, Nivethana Kumar</li>
-			     <li> Batch II: Praise Noah Johnson  </li> </ul>
+		<li> Instructors' discussion hours*: 
+			  <ul> <li> Batch I: Wednesday 11 AM-12 PM, TDCE 203 </li>
+			 <li> Batch II: Friday 2-3 PM, TDCE 206B </li>
+		</ul></li>
 		<li> TA discussion hours: 
-		<li> Instructors' discussion hours: 
-			 Friday 2-3 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> 203/206B </li>
-	</ul>
+			<ul> <li> Batch I: Thursday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> Seminar room</li>  
+				<li> Batch II: , TDCE 115</li>   </li> </ul>
+		</li></ul>
+	    *<i>If outside of these time slots, please send an email and confirm our presence before dropping by</i>
 </td>
 </tr>
 </table>
