add office hours me1100

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -189,7 +189,8 @@ Updates/Announcements:</font></h3>
 		<ul><li>We start our instruction on August 1st. Check the time and venue above. 
 			<li>Make sure you have signed up on <a href="https://courses.iitm.ac.in">Moodle</a>. Tutorials/Handouts will be made available through this platform.
 		</ul>
-	<li> 2/8: Discussion hours added for Batch I
+	</li>
+	<li> 2/8: Discussion hours added for Batch I </li>
 </ul>
 </div>
 </td></tr>
