--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -167,8 +167,8 @@ Email: varuns@iitm.ac.in </li>
 <h3> Questions?</h3>
 	<ul>
 		<li> Instructors' discussion hours*: 
-			  <ul> <li> Batch I: Wednesday 11 AM-12 PM, TDCE 203 </li>
-			 <li> Batch II: Wednesday 4-5 PM, TDCE 206B </li>
+			  <ul> <li> Batch I: Wednesday 4-5 PM, Raman 101 </li>
+			 <li> Batch II: Wednesday 4-5 PM, Raman 102 </li>
 		</ul></li>
 		<li> TA discussion hours: 
 			<ul> <li> Batch I: Thursday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> Seminar room</li>  
@@ -190,7 +190,7 @@ Updates/Announcements:</font></h3>
 			<li>Make sure you have signed up on <a href="https://courses.iitm.ac.in">Moodle</a>. Tutorials/Handouts will be made available through this platform.
 		</ul>
 	</li>
-	<li> 2/8: Discussion hours added for Batch I and II </li>
+	<li> 7/8: Discussion hours added for Batch I and II edited </li>
 </ul>
 </div>
 </td></tr>
