--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -172,7 +172,7 @@ Email: varuns@iitm.ac.in </li>
 		</ul></li>
 		<li> TA discussion hours: 
 			<ul> <li> Batch I: Thursday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> Seminar room</li>  
-				<li> Batch II: , TDCE 115</li>   </li> </ul>
+				<li> Batch II: Thursday 4-5 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank">TDCE 115</a></li>   </li> </ul>
 		</li></ul>
 	    *<i>If outside of these time slots, please send an email and confirm our presence before dropping by</i>
 </td>
@@ -190,7 +190,7 @@ Updates/Announcements:</font></h3>
 			<li>Make sure you have signed up on <a href="https://courses.iitm.ac.in">Moodle</a>. Tutorials/Handouts will be made available through this platform.
 		</ul>
 	</li>
-	<li> 7/8: Discussion hours added for Batch I and II edited </li>
+	<li> 7/8: Discussion hours edited for Batch I and II (Instructors, TAs) </li>
 </ul>
 </div>
 </td></tr>
