TA hours edited

--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -172,7 +172,7 @@ Email: varuns@iitm.ac.in </li>
 		</ul></li>
 		<li> TA discussion hours: 
 			<ul> <li> Batch I: Thursday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> Seminar room</li>  
-				<li> Batch II: Thursday 4-5 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank">TDCE 115</a></li>   </li> </ul>
+				<li> Batch II: Thursday 4-5 PM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank">TDCE Seminar room</a></li>   </li> </ul>
 		</li></ul>
 	    *<i>If outside of these time slots, please send an email and confirm our presence before dropping by</i>
 </td>
