--- a/teaching/ME1100_Jul_Nov_2019.html
+++ b/teaching/ME1100_Jul_Nov_2019.html
@@ -191,7 +191,7 @@ Updates/Announcements:</font></h3>
 		</ul>
 	</li>
 	<li> 7/8: Discussion hours edited for Batch I and II (Instructors, TAs) </li>
-	<li> 9/8: Practice problems on fundamentals added (see header of Module 1) </li>
+	<li> <font color="lightgreen">9/8: Practice problems on fundamentals added (see header of Module 1, better viewed upon downloading)</font> </li>
 </ul>
 </div>
 </td></tr>
